Updates to get table permissions correct as well

--- a/notebooks/00. Create Project.ipynb
+++ b/notebooks/00. Create Project.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,69 +25,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/jlaura/autocnet_server/autocnet_server/__init__.py\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'algorithms': {'ring_match': [{'target_points': 25, 'tolerance': 0.01},\n",
-       "   {'target_points': 20, 'tolerance': 0.01},\n",
-       "   {'target_points': 20, 'tolerance': 0.02},\n",
-       "   {'target_points': 15, 'tolerance': 0.025}]},\n",
-       " 'cluster': {'cluster_log_dir': '/home/jlaura/logs',\n",
-       "  'cluster_submission': 'slurm',\n",
-       "  'extractor_memory': 8192,\n",
-       "  'maxfailures': 3,\n",
-       "  'processing_memory': 4000,\n",
-       "  'queue': 'shortall',\n",
-       "  'tmp_scratch_dir': '/scratch/jlaura'},\n",
-       " 'database': {'database_host': 'smalls',\n",
-       "  'database_name': 'jay_test_db',\n",
-       "  'database_password': 'jlaura',\n",
-       "  'database_port': 8001,\n",
-       "  'database_username': 'jlaura',\n",
-       "  'pgbouncer_port': 8003,\n",
-       "  'timeout': 500},\n",
-       " 'database_creation': {'admin': 'jay', 'password': 'abcde'},\n",
-       " 'developer': {'autocnet_path': '/home/jlaura/autocnet',\n",
-       "  'autocnet_server_path': '/home/jlaura/autocnet_server'},\n",
-       " 'directories': {'vrt_dir': '/scratch/jlaura/ctx/vrt'},\n",
-       " 'pyro': {'candidate_graph_host': '0.0.0.0',\n",
-       "  'candidate_graph_port': 8004,\n",
-       "  'candidate_graph_uri': 'ncg',\n",
-       "  'image_adder_host': '0.0.0.0',\n",
-       "  'image_adder_port': 8005,\n",
-       "  'image_adder_uri': 'ia'},\n",
-       " 'python': {'pybin': '/usgs/apps/anaconda/envs/autocnet/bin/python',\n",
-       "  'pyroot': '/usgs/apps/anaconda/envs/autocnet/'},\n",
-       " 'redis': {'completed_queue': 'athabasca:done',\n",
-       "  'host': 'smalls',\n",
-       "  'port': '8000',\n",
-       "  'processing_queue': 'athabasca:proc',\n",
-       "  'working_queue': 'athabasca:working'},\n",
-       " 'spatial': {'proj4_str': '+proj:longlat +a:3396190 +b:3376200 +no_defs',\n",
-       "  'semimajor_rad': 3396190,\n",
-       "  'semiminor_rad': 3376200,\n",
-       "  'srid': 949900}}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -96,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,6 +52,12 @@
     "result = connection.execute('CREATE EXTENSION postgis')\n",
     "result = connection.execute(\"\"\"INSERT into spatial_ref_sys (srid, auth_name, auth_srid, proj4text, srtext) values ( 949900, 'iau2000', 49900, '+proj=longlat +a=3396190 +b=3376200 +no_defs ', 'GEOGCS[\"Mars 2000\",DATUM[\"D_Mars_2000_IAU_IAG\",3396190.0,169.89444722361179]],PRIMEM[\"Greenwich\",0],UNIT[\"Decimal_Degree\",0.0174532925199433]]');\"\"\")\n",
     "result = connection.execute(\"\"\"ALTER DATABASE {} OWNER TO {}\"\"\".format(config['database']['database_name'],config['database']['database_username']))\n",
+    "\n",
+    "engine = create_engine('postgresql://{}:{}@{}:{}/{}'.format(config['database']['database_username'],\n",
+    "                                                            config['database']['database_password'],\n",
+    "                                                            config['database']['database_host'],\n",
+    "                                                            config['database']['database_port'],\n",
+    "                                                            config['database']['database_name']))\n",
     "\n",
     "# Create the tables\n",
     "Base.metadata.bind = engine\n",
