Tutoruial ipynb updates

--- a/notebooks/00. Create Project.ipynb
+++ b/notebooks/00. Create Project.ipynb
@@ -36,7 +36,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -135,8 +137,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -148,13 +151,7 @@
     "                                                            config['database']['database_port'],\n",
     "                                                            config['database']['database_name']))\n",
     "if not database_exists(engine.url):\n",
-    "    create_database(engine.url)\n",
-    "# Enable postgis\n",
-    "connection = engine.connect()\n",
-    "\n",
-    "\n",
-    "result = connection.execute('CREATE EXTENSION IF NOT EXISTS postgis')\n",
-    "\n",
+    "    create_database(engine.url, template='template_postgis')\n",
     "\n",
     "# Create the tables\n",
     "Base.metadata.bind = engine\n",
@@ -187,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
